# agentic_validation

./: .gitignore  README.md  plugin.json  pyproject.toml  requirements.txt
.agents/skills/: agentic-validation  formal-claim-checking
.devcontainer/: devcontainer.json  post-create.sh
.github/plugin/: marketplace.json
.github/workflows/: copilot-setup-steps.yml
notebooks/: checker_only_example.ipynb  validate_example.ipynb
skills/: README.md
skills/agentic-validation/: SKILL.md
skills/formal-claim-checking/: SKILL.md
skills/validate/: SKILL.md
skills/validate/references/: formal-checking.md  python-api.md
skills/validate/scripts/: run_formal_check.py  run_validate.py
src/agentic_validation/: __init__.py  agent.py  modules.py  persistence.py  schemas.py
src/agentic_validation/checkers/: __init__.py  lean_checker.py  smt_checker.py
tests/: __init__.py  test_agent.py  test_agent_internals.py  test_checkers.py  test_modules.py  test_persistence.py  test_schemas.py
