[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic_validation"
version = "0.1.0"
description = "Structured reasoning system with verification: generator, critic, SMT/Lean checker, and repair loop."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "dspy>=3.0",
    "pydantic>=2.0",
    "z3-solver>=4.12",
    "pysmt>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/agentic_validation --cov-report=term-missing --cov-fail-under=100"

[tool.ruff]
line-length = 100
